--- a/mojo.html
+++ b/mojo.html
@@ -25,17 +25,17 @@
             </div>
             <article>
                 <h2>Informatie</h2>
-                <p>Mijn rol: Frond end developer</p>
+                <p>Mijn rol: Front end developer</p>
                 <p>Individuele opdracht</p>
                 <p>Duur: periode van 3 weken</p>
-                <p>Vak: Frond end development, leerjaar 2 CMD</p>
+                <p>Vak: Front end development, leerjaar 2 CMD</p>
             </article>
             <article>
                 <h2>Opdracht</h2> 
                 <p>
                 Voor het vak front end development moesten wij een bestaande website zo goed mogelijk proberen na te maken. Waarvoor ik de website van Mojo had gekozen.
                 </p>
-                <p> Alle content die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.</p>
+                <p> Alle content die ik hiervoor heb gebruikt komt van de site Mojo en is dus geen eigen content geweest.</p>
                 <p> Het ging er dan ook om tijdens dit project dat wij coderen meer onder de knie kregen en meer met verschillende selectoren aan de slag konden gaan.</p>
                 <p>
                 Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en leren begrijpen wat het belang is van toegankelijkheid in een website.
@@ -43,7 +43,7 @@
             </article>
             <article>
                 <h2>Doel</h2>
-                <p>Het doel was om twee verschillende pagina's uit te werken uit nette html, css en javascript. Met daarbij een extra uitwerking tot een responsive design.</p>
+                <p>Het doel was om twee verschillende pagina's uit te werken uit nette html, css en JavaScript. Met daarbij een extra uitwerking tot een responsive design.</p>
             </article>
         </section>
         <section>
@@ -53,17 +53,17 @@
                 <article>
                         <img src="images/breakdownschets.jpg" alt="Afbeelding van een aantal delen van de breakdownschets">
                     <div>
-                        <h3>Breakdownschets</h3>
-                        <p>Voor dit project hebben wij gebruik gemaakt van een breakdownschets die wij zelf moesten maken van de site die wij wilden namaken.</p>
+                        <h3>Breakdown schets</h3>
+                        <p>Voor dit project hebben wij gebruik gemaakt van een breakdow schets die wij zelf moesten maken van de site die wij wilden namaken.</p>
                     </div>
                 </article>
                 <article>
                         <div>
-                            <h3>Oefenen met codepen</h3>
-                            <p>We hebben tijden dit project ook veel gebruik gemaakt van opdrachten die wij hebben gemaakt via codepen, dit vond ik een handige
+                            <h3>Oefenen met CodePen</h3>
+                            <p>We hebben tijden dit project ook veel gebruik gemaakt van opdrachten die wij hebben gemaakt via CodePen, dit vond ik een handige
                                 tool om te gebruiken, omdat je er met het oefenen van coderen makkelijk kan zien wat bepaalde code doet.
                             </p>
-                            <p>Zo hebben we hiernaast een animatie gemaakt door een class te geven via javascript</p> 
+                            <p>Zo hebben we hiernaast een animatie gemaakt door een class te geven via JavaScript</p> 
                         </div>
                         <video autoplay loop src="images/java-codepenopdracht.mp4" type="video/mp4"></video>
                 </article>
