--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -33,7 +33,7 @@
             </article>
             <article>
                 <h2>Mijn taken</h2>
-                 <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
+                 <p>Los van de gezamenlijke brainstormsessies waren mijn taken:</p>
                  <ul>
                      <li>Illustraties maken voor op de kaarten gemaakt</li>
                      <li>Idee pitchen bij een spel verkoper, voor feedback</li>
@@ -44,16 +44,16 @@
         </div>
             <article>
                 <h2>Opdracht</h2>
-                <p>De opdracht van dit project was om een product of ervaring te maken en ontwerpen die van toegveoegde waarde is voor de wereld.</p>
+                <p>De opdracht van dit project was om een product of ervaring te maken en ontwerpen die van toegevoegde waarde is voor de wereld.</p>
             </article>
             <article>
                 <h2>Doel</h2>
-                <p>Het doel van onze groep was om een spel te creeëren wat mensen zich bewust maakt van vervuiling en andere ecologische waarden.</p>
+                <p>Het doel van onze groep was om een spel te creëren wat mensen zich bewust maakt van vervuiling en andere ecologische waarden.</p>
             </article>
          </article>
          <article>
             <h2>Idee</h2>
-            <p> Pollution party is uiteindelijk een kaarspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
+            <p> Pollution party is uiteindelijk een kaartspel geworden waarbij mensen bewust worden gemaakt van vervuiling.
                 Werking van het spel: Het werkt als kwartet, maar heb een hele reeks aan vervuilende sets en schoonmaak sets. Deze staat complementair aan bepaalde onderwerpen. 
                     Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
                 </p>
@@ -90,7 +90,7 @@
                 </p> 
                 <div>
                     <img src="images/schetsen-van-kaarten-versie1.png" alt="Verschillende schetsen van de kaarten">
-                    <p>Dit zijn de kaarten uit het spel die ik uiteindelijk heb geillustreerd</p>
+                    <p>Dit zijn de kaarten uit het spel die ik uiteindelijk heb geïllustreerd</p>
                     <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">  
                 </div>
             </article>
