--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -28,7 +28,7 @@
                 <p>Mijn rol: Visual interface designer</p>
                 <p>Individueel project</p>
                 <p>Duur: periode van 5 weken</p>
-                <p>Vak: Visual interface design, opdracht boekenzoeker,leerjaar 1 CMD</p>
+                <p>Vak: Visual interface design: opdracht boekenzoeker, leerjaar 1 CMD</p>
              </article>
             <article>
                     <h2>Opdracht</h2>
@@ -38,20 +38,20 @@
             </article>
             <article>
                 <h2>Doel</h2>
-                <p>Een duidelijker en aantrekkelijke interface voor ipad te creeëren, waarbij jongeren een overzicht krijgen van aantrekkelijke boeken om te lezen. </p>
+                <p>Een duidelijker en aantrekkelijke interface voor ipad te creëren, waarbij jongeren een overzicht krijgen van aantrekkelijke boeken om te lezen. </p>
             </article>
         </section>
         <section>
             <article>
                 <div>
                 <h2>Proces</h2>
-                <p>De site van gemeente Amsterdamse hanteert een eigen stijlgids. Deze is clean en dit heb ik ook door proberen te laten komen in het design. Door niet al te veel extra's toe te voegen, maar dit alleen te doen om een goede hiërarchie te creeëren en het daarnaast voor de doelgroep aantrekkelijk te maken.</p>
+                <p>De site van gemeente Amsterdamse hanteert een eigen stijlgids. Deze is clean en dit heb ik ook door proberen te laten komen in het design. Door niet al te veel extra's toe te voegen, maar dit alleen te doen om een goede hiërarchie te creëren en het daarnaast voor de doelgroep aantrekkelijk te maken.</p>
                 </div>
                 <article>
                         <img src="images/zoekeenboek-indeling.png" alt="Indeling alle content lo-fi">
                     <div>
                         <H3>Stap 1: Indeling maken</H3>
-                        <p>De alleerste stap was alles op de pagina's indelen. Wat zet ik waar neer.</p>  
+                        <p>De allereerste stap was alles op de pagina's indelen. Wat zet ik waar neer.</p>  
                     </div>
                 </article>
                 <article>
@@ -69,7 +69,7 @@
                     <img src="images/zoekeenboek-hierarchie.png" alt="Hierarchie in de lo-fi">
                     <div>
                         <h3>Stap 3: hiërarchie aanbrengen</h3>
-                         <p>Zoals je kan zien heb ik verschillende elementen toegvoegd, zoals het figuurtje. Doordat deze met zijn ogen een bepaalde kant op kijkt wordt de aandacht van de gebruiker daar ook naartoe gestuurd, dus heb ik het bij het eind design wat duidelijker vormgegeven.
+                         <p>Zoals je kan zien heb ik verschillende elementen toegevoegd, zoals het figuurtje. Doordat deze met zijn ogen een bepaalde kant op kijkt, wordt de aandacht van de gebruiker daar ook naartoe gestuurd, dus heb ik het bij het eind design wat duidelijker vormgegeven.
                           </p> 
                     </div>
                 </article>
