--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mijn projecten</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="images/sjzlogo.jpg">
 </head>
 <body class="mijnprojectenpagina">
     <header>
