--- a/public-city-jazz.html
+++ b/public-city-jazz.html
@@ -22,7 +22,7 @@
        <section >
             <div>
                 <h1>Public city jazz</h1>
-                <img src="images/public-city-jazz-desktop.png" alt="public city jazz site maar dan lanscape op laptop scherm">
+                <img src="images/desktop-public-city-jazz.png" alt="public city jazz site maar dan lanscape op laptop scherm">
             </div>
             <article>
                 <h2>Informatie</h2>
@@ -70,17 +70,20 @@
                     <div>
                         <h3>Eerste variant hi-fi</h3>
                         <p>Nadat ik de schetsen had gemaakt heb ik een design uitgekozen en die uitgewerkt.</p>
-                        <p>Aan de hand van een grid heb ik alles uitgelijnt.</p>
-                        <p>Hier had ik feedback op gekregen en er werd daarbij juist de vraag gesteld "Is dit voor de doelgroep aantrekkelijk om naartoe te gaan?" </p>
-                        <p>Omdat ik zelf ook binnen het doelgroep viel, antwoorde ik eigenlijk direct nee. </p>
+                        <p>Aan de hand van een grid heb ik alles uitgelijnt. Dit was voor een grid van vier columns.</p>
+                        <p>Hier had ik feedback op gekregen en er werd daarbij juist de vraag gesteld "Is dit voor de doelgroep aantrekkelijk om naartoe te gaan?"
+                            Omdat ik zelf ook binnen het doelgroep viel, antwoorde ik eigenlijk direct nee.</p>
+                        <p>Daarnaast had ik de figuren gebaseerd op de artiesten van de bands die zouden spelen tijdens het evenement.</p>
                         <p>Scroll om de hele onepager te zien :)</p>
 
                     </div>
                 </article>
                 <article>
                     <div>
-                        <h3>Eind versie</h3>
+                        <h3>Hi-fi versie</h3>
                         <p>Uiteindelijk heb ik de basis van het eerste design wel maagenomen, maar meer de focus proberen te leggen op het aantrekkelijker maken ervan.</p>
+                        <p>Daarbij kregen we de opdracht om na te denken wat voor gevoel jazz ons gaf en welke kernwoorden je daar aan koppelde. In mijn geval was het vrolijk, kleurrijk en chill.</p>
+                        <p>Op basis van die kernwoorden ben ik gaan proberen en daar kam vrij snel dit idee uit.</p>
                     </div>
                     <div class="langeImage">
                         <img src="images/public-city-jazz-eindoplevering.png" alt="Final design van de opdracht."> 
