--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                   </div>
                 </a>
               </article>
+              <article>
+                <a href="public-city-jazz.html">
+                  <img src="images/pcj-logo.png" alt="Afbeelding van public city jazz">
+                  <div>
+                    <h2>Public city jazz</h2>
+                    <p>Vormgeving, UI</p>
+                  </div>
+                </a>
+              </article>
           </div>
         </section>
     </main>
