--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -52,7 +52,15 @@
             </div>
           </a>
         </article>
-        </div>
+        <article>
+          <a href="public-city-jazz.html">
+            <img src="images/pcj-logo.png" alt="Afbeelding van public city jazz">
+            <div>
+              <h2>Public city jazz</h2>
+              <p>Vormgeving, UI</p>
+            </div>
+          </a>
+        </article>
         </section>
     </main>
     <footer>
