--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </article>
               <article>
                 <a href="public-city-jazz.html">
-                  <img src="images/pcj-logo.png" alt="Afbeelding van public city jazz">
+                  <img src="images/mockup-pcj.png" alt="Afbeelding van public city jazz">
                   <div>
                     <h2>Public city jazz</h2>
                     <p>Vormgeving, UI</p>
