--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -24,43 +24,44 @@
            <h1>Mijn projecten</h1>
             <p>Een aantal projecten tijdens de opleiding CMD.</p>
           </div>
-          <div class=".projecten">
-        <article>
-          <a href="zoekeenboek.html">
-            <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
-            <div>
-              <h2>Zoek een boek</h2>
-              <p>Visual interface design, UI</p>
-            </div>
-          </a>
-         </article>
-        <article>
-          <a href="pollutionparty.html">
-            <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
-            <div>
-                <h2>Pollution party</h2>
-                <p>Groepsproject, product design</p>
-            </div> 
-          </a>
-        </article>
-        <article>
-          <a href="mojo.html">
-            <img src="images/mockup-mojo.png" alt="Afbeelding van het namaken van de website van Mojo">
-            <div>
-              <h2>Recreate Mojo website</h2>
-              <p>Frontend development, html, css, javascript</p>
-            </div>
-          </a>
-        </article>
-        <article>
-          <a href="public-city-jazz.html">
-            <img src="images/pcj-logo.png" alt="Afbeelding van public city jazz">
-            <div>
-              <h2>Public city jazz</h2>
-              <p>Vormgeving, UI</p>
-            </div>
-          </a>
-        </article>
+        <div>
+          <article>
+            <a href="zoekeenboek.html">
+              <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
+              <div>
+                <h2>Zoek een boek</h2>
+                <p>Visual interface design, UI</p>
+              </div>
+            </a>
+           </article>
+          <article>
+            <a href="pollutionparty.html">
+              <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
+              <div>
+                  <h2>Pollution party</h2>
+                  <p>Groepsproject, product design</p>
+              </div> 
+            </a>
+          </article>
+          <article>
+            <a href="mojo.html">
+              <img src="images/mockup-mojo.png" alt="Afbeelding van het namaken van de website van Mojo">
+              <div>
+                <h2>Recreate Mojo website</h2>
+                <p>Frontend development, html, css, javascript</p>
+              </div>
+            </a>
+          </article>
+          <article>
+            <a href="public-city-jazz.html">
+              <img src="images/mockup-pcj.png" alt="Afbeelding van public city jazz">
+              <div>
+                <h2>Public city jazz</h2>
+                <p>Vormgeving, UI</p>
+              </div>
+            </a>
+          </article>
+        </div>
         </section>
     </main>
     <footer>
@@ -71,7 +72,6 @@
 
           <p>Created by: Sabrina Zuurbier</p>
       </div>
-
       <span></span>
   </footer>
 </body>
