--- a/public-city-jazz.html
+++ b/public-city-jazz.html
@@ -34,10 +34,10 @@
             <article>
                 <h2>Opdracht</h2> 
                 <p>
-                Voor dit vak werd er van ons verwacht om een digitale onepager te maken a.d.h.v. de rotterdamse stijl, maar ook een aantrekkelijke interface
+                Voor dit vak werd er van ons verwacht om een digitale onepager te maken a.d.h.v. de Rotterdamse stijl, maar ook een aantrekkelijke interface
                 te maken voor jongeren die interesse hebben in Jazz.
                 </p>
-                <p>Bij dit vak werd ik geintroduceerd aan het principe design system en zijn wij bezig geweest met verschillende button states. En een gebruiksvriendelijk aantrekkelijke user interface maken.</p>
+                <p>Bij dit vak werd ik geïntroduceerd aan het principe design system en zijn wij bezig geweest met verschillende button states. En een gebruiksvriendelijk aantrekkelijke user interface maken.</p>
             </article>
             <article>
                 <h2>Doel</h2>
@@ -47,7 +47,7 @@
         <section>
             <article>
                 <h2>Proces</h2>
-                <p>Tijdens het proces van deze interface heb ik verschillende belnagrijke stappen gezet om tot een eind design te komen.</p>
+                <p>Tijdens het proces van deze interface heb ik verschillende belangrijke stappen gezet om tot een eind design te komen.</p>
                 <article>
                         <img src="images/visual-identiteit-pcj.png" alt="Collage van de visual identiteit onderzoek">
                     <div>
